--- a/training/train_segformer_colab.ipynb
+++ b/training/train_segformer_colab.ipynb
@@ -43,10 +43,10 @@
     "\n",
     "DATASET = \"rellis3d\"          # \"rellis3d\" or \"rugd\"\n",
     "MODEL_SIZE = \"b2\"             # \"b0\", \"b1\", \"b2\", \"b3\", \"b4\", \"b5\"\n",
-    "BASE_MODEL = \"cityscapes\"     # \"cityscapes\" (recommended) or \"ade\"\n",
-    "IMAGE_SIZE = 512              # 256, 512, or 1024 (512 recommended for B2)\n",
+    "BASE_MODEL = \"ade\"            # \"ade\" (recommended for off-road) or \"cityscapes\"\n",
+    "IMAGE_SIZE = 768              # 768 recommended (near RUGD native res, good for RELLIS-3D too)\n",
     "EPOCHS = 50\n",
-    "BATCH_SIZE = 8                # 8 for B2@512 on A100, 4 on T4\n",
+    "BATCH_SIZE = 8                # 8 fits on 80GB A100 at 768\n",
     "LEARNING_RATE = 6e-5\n",
     "FP16 = True                   # Mixed precision (faster on T4/A100)\n",
     "GRADIENT_CHECKPOINTING = False # Set True if you get OOM errors\n",
@@ -56,7 +56,7 @@
     "DATASET_DIR = f\"/content/{DATASET}_processed\"\n",
     "OUTPUT_DIR = f\"/content/drive/MyDrive/segformer_outputs/{DATASET}_segformer_{MODEL_SIZE}\"\n",
     "\n",
-    "# Model ID — cityscapes base is better for outdoor/driving scenes\n",
+    "# Model ID\n",
     "if BASE_MODEL == \"cityscapes\":\n",
     "    MODEL_NAME = f\"nvidia/segformer-{MODEL_SIZE}-finetuned-cityscapes-1024-1024\"\n",
     "else:\n",
@@ -309,8 +309,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Cell 7: Save model and evaluate\n",
+    "# Cell 7: Save model, evaluate, and log results\n",
     "import shutil\n",
+    "import json\n",
+    "from datetime import datetime\n",
     "\n",
     "print(f\"Saving model to {OUTPUT_DIR} ...\")\n",
     "trainer.save_model(OUTPUT_DIR)\n",
@@ -323,6 +325,47 @@
     "print(\"\\n=== Final evaluation ===\")\n",
     "metrics = trainer.evaluate()\n",
     "print(metrics)\n",
+    "\n",
+    "# Save results to a JSON file alongside the model\n",
+    "results = {\n",
+    "    \"dataset\": DATASET,\n",
+    "    \"model_size\": MODEL_SIZE,\n",
+    "    \"base_model\": BASE_MODEL,\n",
+    "    \"model_name\": MODEL_NAME,\n",
+    "    \"image_size\": IMAGE_SIZE,\n",
+    "    \"epochs\": EPOCHS,\n",
+    "    \"batch_size\": BATCH_SIZE,\n",
+    "    \"learning_rate\": LEARNING_RATE,\n",
+    "    \"fp16\": FP16,\n",
+    "    \"gradient_checkpointing\": GRADIENT_CHECKPOINTING,\n",
+    "    \"num_classes\": num_classes,\n",
+    "    \"train_samples\": len(train_dataset),\n",
+    "    \"val_samples\": len(val_dataset),\n",
+    "    \"gpu\": torch.cuda.get_device_name(0) if torch.cuda.is_available() else \"CPU\",\n",
+    "    \"date\": datetime.now().strftime(\"%Y-%m-%d %H:%M\"),\n",
+    "    \"final_metrics\": {\n",
+    "        \"eval_loss\": metrics[\"eval_loss\"],\n",
+    "        \"mean_iou\": metrics[\"eval_mean_iou\"],\n",
+    "        \"mean_accuracy\": metrics[\"eval_mean_accuracy\"],\n",
+    "        \"overall_accuracy\": metrics[\"eval_overall_accuracy\"],\n",
+    "    },\n",
+    "}\n",
+    "\n",
+    "results_path = os.path.join(OUTPUT_DIR, \"training_results.json\")\n",
+    "with open(results_path, \"w\") as f:\n",
+    "    json.dump(results, f, indent=2)\n",
+    "print(f\"\\nResults saved to: {results_path}\")\n",
+    "\n",
+    "# Also append to a central log file on Drive\n",
+    "log_path = \"/content/drive/MyDrive/segformer_outputs/all_results.json\"\n",
+    "all_results = []\n",
+    "if os.path.exists(log_path):\n",
+    "    with open(log_path) as f:\n",
+    "        all_results = json.load(f)\n",
+    "all_results.append(results)\n",
+    "with open(log_path, \"w\") as f:\n",
+    "    json.dump(all_results, f, indent=2)\n",
+    "print(f\"Appended to central log: {log_path}\")\n",
     "\n",
     "print(f\"\\nDone! Model saved to Google Drive: {OUTPUT_DIR}\")\n",
     "print(\"Download the folder and place it in training/models/<name> to use in CARLA.\")"
