--- a/training/train_segformer_colab.ipynb
+++ b/training/train_segformer_colab.ipynb
@@ -30,7 +30,7 @@
    "outputs": [],
    "source": [
     "# Cell 1: Install dependencies\n",
-    "!pip install -q transformers datasets evaluate==0.4.1 torch torchvision Pillow"
+    "!pip install -q transformers datasets torch torchvision Pillow"
    ]
   },
   {
@@ -154,7 +154,6 @@
     "    TrainingArguments,\n",
     "    Trainer,\n",
     ")\n",
-    "import evaluate\n",
     "\n",
     "dataset_dir = Path(DATASET_DIR)\n",
     "\n",
@@ -246,17 +245,32 @@
     "            logits_tensor, size=(h, w), mode=\"bilinear\", align_corners=False\n",
     "        )\n",
     "        preds = logits_up.argmax(dim=1).numpy()\n",
-    "        metric = evaluate.load(\"mean_iou\")\n",
-    "        results = metric.compute(\n",
-    "            predictions=[p for p in preds],\n",
-    "            references=[l for l in labels],\n",
-    "            num_labels=num_classes,\n",
-    "            ignore_index=ignore_index,\n",
-    "        )\n",
+    "\n",
+    "        # Compute mean IoU, mean accuracy, overall accuracy with numpy\n",
+    "        mask = labels != ignore_index\n",
+    "        preds_valid = preds[mask]\n",
+    "        labels_valid = labels[mask]\n",
+    "\n",
+    "        per_class_iou = []\n",
+    "        per_class_acc = []\n",
+    "        for cls in range(num_classes):\n",
+    "            pred_cls = preds_valid == cls\n",
+    "            label_cls = labels_valid == cls\n",
+    "            intersection = np.logical_and(pred_cls, label_cls).sum()\n",
+    "            union = np.logical_or(pred_cls, label_cls).sum()\n",
+    "            if union > 0:\n",
+    "                per_class_iou.append(intersection / union)\n",
+    "            if label_cls.sum() > 0:\n",
+    "                per_class_acc.append(intersection / label_cls.sum())\n",
+    "\n",
+    "        mean_iou = float(np.mean(per_class_iou)) if per_class_iou else 0.0\n",
+    "        mean_acc = float(np.mean(per_class_acc)) if per_class_acc else 0.0\n",
+    "        overall_acc = float((preds_valid == labels_valid).sum() / max(len(labels_valid), 1))\n",
+    "\n",
     "        return {\n",
-    "            \"mean_iou\": results[\"mean_iou\"],\n",
-    "            \"mean_accuracy\": results[\"mean_accuracy\"],\n",
-    "            \"overall_accuracy\": results[\"overall_accuracy\"],\n",
+    "            \"mean_iou\": mean_iou,\n",
+    "            \"mean_accuracy\": mean_acc,\n",
+    "            \"overall_accuracy\": overall_acc,\n",
     "        }\n",
     "    return compute_metrics\n",
     "\n",
