fix RAM OOM: batch=4, reduce eval accumulation, add gc.collect

--- a/training/train_segformer_colab.ipynb
+++ b/training/train_segformer_colab.ipynb
@@ -46,7 +46,7 @@
     "BASE_MODEL = \"ade\"            # \"ade\" (recommended for off-road) or \"cityscapes\"\n",
     "IMAGE_SIZE = 768              # 768 recommended (near RUGD native res, good for RELLIS-3D too)\n",
     "EPOCHS = 50\n",
-    "BATCH_SIZE = 8                # 8 fits on 80GB A100 at 768\n",
+    "BATCH_SIZE = 4                # 4 for B2@768 to avoid system RAM OOM\n",
     "LEARNING_RATE = 6e-5\n",
     "FP16 = True                   # Mixed precision (faster on T4/A100)\n",
     "GRADIENT_CHECKPOINTING = False # Set True if you get OOM errors\n",
@@ -235,6 +235,7 @@
    "outputs": [],
    "source": [
     "# Cell 6: Train\n",
+    "import gc\n",
     "\n",
     "def compute_metrics_factory(num_classes, ignore_index=255):\n",
     "    def compute_metrics(eval_pred):\n",
@@ -245,11 +246,13 @@
     "            logits_tensor, size=(h, w), mode=\"bilinear\", align_corners=False\n",
     "        )\n",
     "        preds = logits_up.argmax(dim=1).numpy()\n",
+    "        del logits_tensor, logits_up, logits  # free memory immediately\n",
     "\n",
     "        # Compute mean IoU, mean accuracy, overall accuracy with numpy\n",
     "        mask = labels != ignore_index\n",
     "        preds_valid = preds[mask]\n",
     "        labels_valid = labels[mask]\n",
+    "        del preds, labels, mask\n",
     "\n",
     "        per_class_iou = []\n",
     "        per_class_acc = []\n",
@@ -266,6 +269,9 @@
     "        mean_iou = float(np.mean(per_class_iou)) if per_class_iou else 0.0\n",
     "        mean_acc = float(np.mean(per_class_acc)) if per_class_acc else 0.0\n",
     "        overall_acc = float((preds_valid == labels_valid).sum() / max(len(labels_valid), 1))\n",
+    "\n",
+    "        del preds_valid, labels_valid\n",
+    "        gc.collect()\n",
     "\n",
     "        return {\n",
     "            \"mean_iou\": mean_iou,\n",
@@ -298,7 +304,7 @@
     "    greater_is_better=True,\n",
     "    fp16=FP16 and torch.cuda.is_available(),\n",
     "    gradient_accumulation_steps=1,\n",
-    "    eval_accumulation_steps=4,\n",
+    "    eval_accumulation_steps=2,\n",
     "    dataloader_num_workers=0,\n",
     "    remove_unused_columns=False,\n",
     "    report_to=\"none\",\n",
